<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C8E8FF"
    android:layoutAnimation="@anim/recycler_animation_container"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp"
    tools:context=".ui.used_activities.LocalFragment">

    <TextView
        android:id="@+id/local_tv_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_your_country"
        android:textColor="@color/colorGray"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold" />

    <com.scrounger.countrycurrencypicker.library.Buttons.CountryCurrencyButton
        android:id="@+id/local_btn_select"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@drawable/country_picker_bg"
        android:paddingHorizontal="@dimen/_5sdp"
        android:text="@string/select"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_11ssp"
        app:show_currency="false" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:orientation="horizontal">


        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_weight="1"
            app:cardCornerRadius="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">

                <TextView
                    android:id="@+id/local_tv_TotalCasesText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/total_cases"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_13ssp" />

                <TextView
                    android:id="@+id/local_tv_TotalCasesNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:gravity="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_13ssp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cardCornerRadius="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">

                <TextView
                    android:id="@+id/local_tv_TodayCasesText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/today_cases"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_13ssp" />

                <TextView
                    android:id="@+id/local_tv_TodayCasesNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:gravity="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_13ssp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:orientation="horizontal">


        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_weight="1"
            app:cardCornerRadius="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">

                <TextView
                    android:id="@+id/local_tv_TotalDeathText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/total_death"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_13ssp" />

                <TextView
                    android:id="@+id/local_tv_TotalDeathNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:gravity="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_13ssp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cardCornerRadius="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">

                <TextView
                    android:id="@+id/local_tv_TodayDeathsText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/today_deaths"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_13ssp" />

                <TextView
                    android:id="@+id/local_tv_TodayDeathsNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:gravity="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_13ssp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:orientation="horizontal">


        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_weight="1"
            app:cardCornerRadius="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">

                <TextView
                    android:id="@+id/local_tv_RecoveredText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/recovered"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_13ssp" />

                <TextView
                    android:id="@+id/local_tv_RecoveredNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:gravity="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_13ssp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cardCornerRadius="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">

                <TextView
                    android:id="@+id/local_tv_activeText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/local_active"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_13ssp" />

                <TextView
                    android:id="@+id/local_tv_activeNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:gravity="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_13ssp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:orientation="horizontal">


        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_weight="1"
            app:cardCornerRadius="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">

                <TextView
                    android:id="@+id/local_tv_criticalText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/local_critical"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_13ssp" />

                <TextView
                    android:id="@+id/local_tv_criticalNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:gravity="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_13ssp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cardCornerRadius="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">

                <TextView
                    android:id="@+id/local_tv_casesPerOneMillionText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/local_cases_per_one_million"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_13ssp" />

                <TextView
                    android:id="@+id/local_tv_casesPerOneMillionNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:gravity="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_13ssp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:orientation="horizontal">


        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_weight="1"
            app:cardCornerRadius="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">

                <TextView
                    android:id="@+id/local_tv_deathPerOneMillionText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/local_deaths_per_one_million"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_13ssp" />

                <TextView
                    android:id="@+id/local_tv_MillionDeathNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:gravity="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_13ssp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cardCornerRadius="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">

                <TextView
                    android:id="@+id/local_tv_totalTestText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/local_total_tests"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_13ssp" />

                <TextView
                    android:id="@+id/local_tv_totalTestsNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:gravity="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_13ssp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:orientation="horizontal">


        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:cardCornerRadius="@dimen/_10sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">

                <TextView
                    android:id="@+id/local_tv_testsPerOneMillionText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/local_tests_per_one_million"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_13ssp" />

                <TextView
                    android:id="@+id/local_tv_testsPerOneMillionNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:gravity="center"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_13ssp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>

</LinearLayout>